citizen-registry/kubernetes/registry-avatar/k8s/main/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: avatar
   namespace: demos-main
   labels:
      app: nginx
spec:
   serviceName: "avatar"
   replicas: 1
   selector:
      matchLabels:
         app: avatar
   template:
      metadata:
         labels:
            app: avatar
      spec:
         containers:
         -  name: avatar-sa-container
            image: io2060/2060-service-agent:main
            imagePullPolicy: Always
            volumeMounts:
            - name: avatar-sa-pv-main
              mountPath: /root/.afj
            ports:
            -  containerPort: 3000
            -  containerPort: 3001
         -  name: avatar-backend-container
            image: io2060/2060-demos-citizen-registry:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2903
         -  name: avatar-data-store-container
            image: io2060/2060-datastore:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2904
            volumeMounts:
            - name: avatar-data-store-main
              mountPath: /home/data
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: avatar-pg-pv-main
              mountPath: /var/lib/postgresql/data
         -  name: avatar-front
            image: io2060/2060-demos-avatar-front:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 80
  
   volumeClaimTemplates: 
   - metadata:
       name: avatar-sa-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: avatar-pg-pv-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: avatar-data-store-main
     spec:
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
