citizen-registry/kubernetes/registry-avatar/k8s/main/service.yml
apiVersion: v1
kind: Service
metadata:
  name: avatar
  namespace: demos-main
spec:
  selector:
    app: avatar
  ports:
  - name: didcomm
    port: 3001
    targetPort: 3001
    protocol: TCP
  - name: admin
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: q
    port: 2903
    targetPort: 2903
    protocol: TCP
  - name: ds
    port: 2904
    targetPort: 2904
    protocol: TCP
  - name: artemis1
    port: 8161
    targetPort: 8161
    protocol: TCP
  - name: artemis2
    port: 61616
    targetPort: 61616
    protocol: TCP
  - name: artemis3
    port: 5672
    targetPort: 5672
    protocol: TCP
  - name: avatar
    port: 80
    targetPort: 80
    protocol: TCP
